Todo constructor implemented to be able to create objets that correspont to a todo element

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,9 @@
     <title>Odin_Todo-list</title>
 </head>
 <body>
-    <div id="content"></div>
+    <div id="content">
+        <!-- <p>hey</p> -->
+         hey
+    </div>
 </body>
 </html>
