--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
     <title>Odin_Todo-list</title>
-</head>
-<body>
+  </head>
+  <body>
     <div id="content">
-        <!-- <p>hey</p> -->
-         hey
+      <div class="sideBar">
+        <h3>PlanPuff</h3>
+        <ul id="projectList"></ul>
+
+        <dialog id="modal">
+          <h3>New List</h3>
+          <form method="dialog">
+            <p>
+              <label for="title">Title:</label>
+              <input type="text" name="title" id="title" />
+            </p>
+            <br />
+            <p>
+              <label for="Description">Description:</label>
+              <input type="text" name="Description" id="Description" />
+            </p>
+
+            <br />
+            <button value="default" id="createBtn">Create</button>
+            <button formmethod="dialog" value="cancel" id="closeModalButton">
+              X
+            </button>
+          </form>
+        </dialog>
+        <button id="newProjectBtn">+ New Project</button>
+      </div>
+      <div class="mainContent"></div>
     </div>
-</body>
+  </body>
 </html>
