Dom manipulation for when a project is created implemented

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
             <br />
             <p>
               <label for="Description">Description:</label>
-              <input type="text" name="Description" id="Description" />
+              <input type="text" name="Description" id="description" />
             </p>
 
             <br />
