¨todo screen created¨

--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,12 @@
         </dialog>
         <button id="newProjectBtn">+ New Project</button>
       </div>
-      <div class="mainContent"></div>
+      <div class="mainContent">
+        <h3 id="projectTitle">PlanPuff</h3>
+        <h5 id="projectDescription">kjdfjkdf</h5>
+        <ul id="todoList"></ul>
+        <button id="createTodoBtn">+</button>
+      </div>
     </div>
   </body>
 </html>
