--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
               <label for="title">Title:</label>
               <input type="text" name="title" id="title" />
             </p>
-            <br />
+
             <p>
               <label for="Description">Description:</label>
               <input type="text" name="Description" id="description" />
@@ -39,11 +39,46 @@
         </dialog>
         <button id="newProjectBtn">+ New Project</button>
       </div>
+
       <div class="mainContent">
-        <h3 id="projectTitle">PlanPuff</h3>
-        <h5 id="projectDescription">kjdfjkdf</h5>
+        <h3 id="projectTitle"></h3>
+        <h5 id="projectDescription"></h5>
         <ul id="todoList"></ul>
         <button id="createTodoBtn">+</button>
+
+        <dialog  id="modal">
+          <h3>New To-Do</h3>
+          <form method="dialog">
+            <p>
+              <label for="title">Title:</label>
+              <input type="text" name="title" id="title" />
+            </p>
+
+            <p>
+              <label for="Description">Description:</label>
+              <input type="text" name="Description" id="description" />
+            </p>
+            <p>
+              <label for="Description">Date:</label>
+              <input type="date" name="Description" id="date" />
+            </p>
+            <p>
+              <label for="Description">Priority:</label>
+              <input type="text" name="Description" id="priority" />
+            </p>
+
+            <p>
+              <label for="Description">Project:</label>
+              <input type="text" name="Description" id="project" />
+            </p>
+
+            <br />
+            <button value="default" id="createBtn">Create</button>
+            <button formmethod="dialog" value="cancel" id="closeModalButton">
+              X
+            </button>
+          </form>
+        </dialog>
       </div>
     </div>
   </body>
